--- a/products/templates/productlist.html
+++ b/products/templates/productlist.html
@@ -1,24 +1,20 @@
-{% extends "base.html" %}
-{% load static %}
-
-{% block content %}
+{% extends "base.html" %} {% load static %} {% block content %}
 <div class="container-fluid">
-    <div class="row justfiy-content-between">
+  <div class="row justfiy-content-between">
     {% for product in products %}
     <div class="col-4">
-            <div class="card" style="width: 18rem;">
-        <img src="{{ product.image.url }}" class="card-img-top" alt="...">
+      <div class="card" style="width: 18rem">
+        <img src="{{ product.image.url }}" class="card-img-top" alt="..." />
         <div class="card-body">
-            <h5 class="card-title">{{ product.title }}</h5>
-            <p class="card-text">{{ product.description }}</p>
+          <h5 class="card-title">{{ product.title }}</h5>
+          <p class="card-text">{{ product.description }}</p>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item">Price: {{ product.price }}</li>
+          <li class="list-group-item">Price: {{ product.price }}</li>
         </ul>
-        </div>
-        </div>
+      </div>
+    </div>
     {% endfor %}
-    </div>
-    </div>
+  </div>
+</div>
 {% endblock content %}
-    
