--- a/templates/base.html
+++ b/templates/base.html
@@ -28,23 +28,23 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="{% url 'home' %}">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'regform' %}">Register</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'loginform' %}">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'p_list' %}">Product List</a>
+            </li>
+          </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="{% url 'home' %}"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'contact' %}">contact</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'settings' %}">settings</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'p_list' %}">productlist</a>
+              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
             </li>
           </ul>
         </div>
