--- a/products/templates/productform.html
+++ b/products/templates/productform.html
@@ -4,7 +4,7 @@
   <form method="post" enctype="multipart/form-data" class="mt-3">
     {% csrf_token %}
 
-    <div class="input-group mb-3">
+    <!-- <div class="input-group mb-3">
       <span class="input-group-text">Name</span>
       <input type="text" name="name" class="form-control" required />
     </div>
@@ -73,7 +73,8 @@
     <div class="mb-3">
       <label class="form-label">Product Image</label>
       <input type="file" name="image" class="form-control" />
-    </div>
+    </div> -->
+    {{ form.as_p }}
 
     <button type="submit" class="btn btn-primary">Add Product</button>
     <a href="{% url 'addproduct' %}" class="btn btn-secondary">Cancel</a>
