--- a/products/templates/productlist.html
+++ b/products/templates/productlist.html
@@ -8,6 +8,7 @@
         <div class="card-body">
           <h5 class="card-title">{{ product.title }}</h5>
           <p class="card-text">{{ product.description }}</p>
+          <p class="card-text">Prod.Date: {{ product.creation_date }} Exp.Date {{ product.ex_date }}</p>
         </div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">Price: {{ product.price }}</li>
