--- a/products/templates/updateform.html
+++ b/products/templates/updateform.html
@@ -4,7 +4,7 @@
   <form method="post" enctype="multipart/form-data" class="mt-3">
     {% csrf_token %}
 
-    <div class="input-group mb-3">
+    <!-- <div class="input-group mb-3">
       <span class="input-group-text">Description</span>
       <textarea
         name="description"
@@ -44,7 +44,8 @@
         class="form-control"
         value={{product.price}}
       />
-    </div>
+    </div> -->
+    {{ form.as_p }}
 
 
     <button type="submit" class="btn btn-primary">update</button>
